Добавил Saga для резервирования товара

--- a/sources/src/Hosts/Api/appsettings.Development.json
+++ b/sources/src/Hosts/Api/appsettings.Development.json
@@ -3,6 +3,38 @@
     "DefaultConnection": "Server=localhost:5432;Database=orderservicedb;User ID=orderservice;password=password;"
   },
 
+  "IdentityServerClient": {
+    "Authority": "http://localhost:5230",
+    "Audience": "order-service"
+  },
+
+  "AuthCredential": {
+    "ClientId": "order_service",
+    "ClientSecret": "dbf80ad4-f32a-4321-9d00-4fd229ea6aac"
+  },
+
+  "KafkaConsumer": {
+    "BootstrapServers": "kafka.default.svc.cluster.local:9092",
+    "TopicNames": [ "invoice_paid" ],
+    "GroupId": "order-service",
+    "UserName": "user1",
+    "Password": "ffVUFpMnxY"
+  },
+
+  "KafkaProducer": {
+    "BootstrapServers": "kafka-controller-0.kafka-controller-headless.default.svc.cluster.local:9092,kafka-controller-1.kafka-controller-headless.default.svc.cluster.local:9092,kafka-controller-2.kafka-controller-headless.default.svc.cluster.local:9092",
+    "TopicName": "order_paid",
+    "UserName": "user1",
+    "Password": "ffVUFpMnxY"
+  },
+
+  "AuthServiceUrl": "http://localhost:5230",
+  "StockServiceUrl": "http://localhost:5268",
+  "DeliveryServiceUrl": "http://localhost:5278",
+  "PaymentServiceUrl": "http://localhost:5298",
+  "ProductServiceUrl": "http://localhost:5241",
+  "UserServiceUrl": "http://localhost:5248",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
