--- a/sources/src/Hosts/Api/appsettings.json
+++ b/sources/src/Hosts/Api/appsettings.json
@@ -3,6 +3,38 @@
     "DefaultConnection": "<Берется из secret объекта>"
   },
 
+  "IdentityServerClient": {
+    "Authority": "<Берется из конфиг объекта>",
+    "Audience": "<Берется из конфиг объекта>"
+  },
+
+  "AuthCredential": {
+    "ClientId": "order_service",
+    "ClientSecret": "<Берется из secret объекта>"
+  },
+
+  "KafkaConsumer": {
+    "BootstrapServers": "<берется из конфиг объекта>",
+    "TopicNames": [ "invoice_paid" ],
+    "GroupId": "order-service",
+    "UserName": "user1",
+    "Password": "<Берется из secret объекта>"
+  },
+
+  "KafkaProducer": {
+    "BootstrapServers": "<берется из конфиг объекта>",
+    "TopicName": "order_paid",
+    "UserName": "user1",
+    "Password": "<Берется из secret объекта>"
+  },
+
+  "AuthServiceUrl": "<Берется из конфиг объекта>",
+  "DeliveryServiceUrl": "<Берется из конфиг объекта>",
+  "StockServiceUrl": "<Берется из конфиг объекта>",
+  "PaymentServiceUrl": "<Берется из конфиг объекта>",
+  "ProductServiceUrl": "<Берется из конфиг объекта>",
+  "UserServiceUrl": "<Берется из конфиг объекта>",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
